--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ empkins-io = {path = "../empkins_io", develop = true}
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
-doit = "^0.33.1"
+poethepoet = "^0.10.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
