--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = ["Robert Richer <robert.richer@fau.de>"]
 [tool.poetry.dependencies]
 python = ">=3.7.1,<3.10"
 biopsykit = {version = "^0", extras = ["mne", "jupyter"]}
-empkins-io = {path = "../empkins_io", develop = true}
+empkins-io = {path = "../empkins-io", develop = true}
 #librosa = "^0.8.1"
 fer = "^21.0.5"
 tensorflow = "^2.6.0"
