--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,16 @@ description = "A Python package to work with EmpkinS Micro data."
 authors = ["Robert Richer <robert.richer@fau.de>"]
 
 [tool.poetry.dependencies]
-python = ">=3.7.1,<3.10"
-biopsykit = {version = "^0", extras = ["jupyter"]}
+python = ">=3.8,<3.10"
+biopsykit = {git="https://github.com/mad-lab-fau/BioPsyKit.git", branch="main", extras=["jupyter"]}
 empkins-io = {path = "../empkins-io", develop = true}
 #librosa = "^0.8.1"
-fer = "^21.0.5"
-tensorflow = "^2.6.0"
-deepface = "^0.0.68"
+fer = {version = "^21.0.5", optional = true}
+tensorflow = {version = "^2.6.0", optional = true}
+deepface = {version = "^0.0.68", optional = true}
+
+[tool.poetry.extras]
+facial_expression = ["fer", "tensorflow", "deepface"]
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
