--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,14 +8,13 @@ authors = ["Robert Richer <robert.richer@fau.de>"]
 python = ">=3.8,<3.11"
 biopsykit = {git="https://github.com/mad-lab-fau/BioPsyKit.git", branch="main", extras=["jupyter"]}
 empkins-io = {path = "../empkins-io", develop = true}
+numpy = ">=1.19,<1.24"
 #librosa = "^0.8.1"
-opencv-python = {version = "^4.6", optional = true}
-fer = {version = "^21.0.5", optional = true}
-tensorflow = {version = "^2.6.0", optional = true}
-deepface = {version = "^0.0.68", optional = true}
+"pyannote.audio" = {version = "^2.1.1", optional = true}
 
 [tool.poetry.extras]
-facial_expression = ["fer", "tensorflow", "deepface", "opencv-python"]
+# facial_expression = ["fer", "tensorflow", "deepface", "opencv-python"]
+audio = ["pyannote.audio"]
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
