--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,12 +13,12 @@ numpy = ">=1.19,<1.24"
 praat-parselmouth = {version = "^0.4.3", optional = true}
 webrtcvad = {version = "^2.0.10", optional = true}
 pydub = {version = "^0.25.1", optional = true}
-wave = "^0.0.2"
-contextlib2 = "^21.6.0"
-collection = "^0.1.6"
+wave = {version = "^0.0.2", optional = true}
+contextlib2 = {version = "^21.6.0", optional = true}
+collection = {version = "^0.1.6", optional = true}
 
 [tool.poetry.extras]
-audio = ["pyannote.audio", "praat-parselmouth", "webrtcvad", "pydub"]
+audio = ["pyannote.audio", "praat-parselmouth", "webrtcvad", "pydub", "wave", "contextlib2", "collection"]
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
