--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = ["Robert Richer <robert.richer@fau.de>"]
 python = ">=3.8,<3.11"
 biopsykit = {git="https://github.com/mad-lab-fau/BioPsyKit.git", branch="main", extras=["jupyter"]}
 empkins-io = {path="../empkins-io", develop=true}
-numpy = ">=1.19,<1.24"
+numpy = "^1.24.3"
 
 "pyannote.audio" = {version = "^2.1.1", optional = true}
 torch = {version = "<2", optional = true}
@@ -19,8 +19,12 @@ wave = {version = "^0.0.2", optional = true}
 contextlib2 = {version = "^21.6.0", optional = true}
 collection = {version = "^0.1.6", optional = true}
 
+tensorflow-macos = {version = "2.10.0", optional = true, platform="darwin"}
+pywavelets = {version = "^1.4.1", optional = true}
+
 [tool.poetry.extras]
 audio = ["pyannote.audio", "praat-parselmouth", "webrtcvad", "pydub", "wave", "contextlib2", "collection", "torch"]
+radar = ["tensorflow-macos", "systole", "pywavelets"]
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
