--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,8 +19,8 @@ wave = {version = "^0.0.2", optional = true}
 contextlib2 = {version = "^21.6.0", optional = true}
 collection = {version = "^0.1.6", optional = true}
 
-tensorflow-macos = {version = "2.10.0", optional = true, platform="darwin"}
 pywavelets = {version = "^1.4.1", optional = true}
+tensorflow-io-gcs-filesystem = "0.31.0"
 
 [tool.poetry.extras]
 audio = ["pyannote.audio", "praat-parselmouth", "webrtcvad", "pydub", "wave", "contextlib2", "collection", "torch"]
