--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "A Python package to work with EmpkinS Micro data."
 authors = ["Robert Richer <robert.richer@fau.de>"]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.11"
+#python = ">=3.8.0,<3.11"
 biopsykit = {git="https://github.com/mad-lab-fau/BioPsyKit.git", branch="main", extras=["jupyter"]}
 empkins-io = {path="../empkins-io", develop=true}
 numpy = "^1.24.3"
@@ -15,23 +15,22 @@ torch = {version = "<2", optional = true}
 praat-parselmouth = {version = "^0.4.3", optional = true}
 webrtcvad = {version = "^2.0.10", optional = true}
 pydub = {version = "^0.25.1", optional = true}
-<<<<<<< HEAD
+
 wave = "^0.0.2"
 contextlib2 = "^21.6.0"
 collection = "^0.1.6"
 ts2vg = "*"
-=======
-wave = {version = "^0.0.2", optional = true}
-contextlib2 = {version = "^21.6.0", optional = true}
-collection = {version = "^0.1.6", optional = true}
->>>>>>> d59aa91c7aac2959708914e336800943f11ab507
 
-tensorflow-macos = {version = "2.10.0", optional = true, platform="darwin"}
+#wave = {version = "^0.0.2", optional = true}
+#contextlib2 = {version = "^21.6.0", optional = true}
+#collection = {version = "^0.1.6", optional = true}
+
+#tensorflow-macos = {version = "2.10.0", optional = true, platform="darwin"}
 pywavelets = {version = "^1.4.1", optional = true}
 
 [tool.poetry.extras]
 audio = ["pyannote.audio", "praat-parselmouth", "webrtcvad", "pydub", "wave", "contextlib2", "collection", "torch"]
-radar = ["tensorflow-macos", "pywavelets"]
+radar = ["pywavelets"]
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
