cleaned merge error

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "empkins-micro"
 version = "0.1.0"
 description = "A Python package to work with EmpkinS Micro data."
-authors = ["Robert Richer <robert.richer@fau.de>"]
+authors = ["Robert Richer <robert.richer@fau.de>", "Luca Abel <luca.abel@fau.de>"]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
