Modifieed Outlier Correction

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ authors = ["Robert Richer <robert.richer@fau.de>", "Luca Abel <luca.abel@fau.de>
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
-biopsykit = { git = "https://github.com/mad-lab-fau/BioPsyKit.git", branch = "main", extras = ["jupyter"] }
+#biopsykit = { git = "https://github.com/mad-lab-fau/BioPsyKit.git", branch = "main", extras = ["jupyter"] }
+biopsykit = {path = "../BioPsyKit", develop = true}
 empkins-io = { path = "../empkins-io", develop = true }
 numpy = "^1.24.3"
 
