--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ authors = ["Robert Richer <robert.richer@fau.de>"]
 
 [tool.poetry.dependencies]
 #python = ">=3.8.0,<3.11"
-biopsykit = {git="https://github.com/mad-lab-fau/BioPsyKit.git", branch="main", extras=["jupyter"]}
+#biopsykit = {git="https://github.com/mad-lab-fau/BioPsyKit.git", branch="main", extras=["jupyter"]}
+biopsykit = {path="../../BioPsyKit", develop = true, extras=["jupyter"]}
+
 empkins-io = {path="../empkins-io", develop=true}
 numpy = "^1.24.3"
 
