--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,16 +8,16 @@ authors = ["Robert Richer <robert.richer@fau.de>", "Luca Abel <luca.abel@fau.de>
 python = ">=3.9,<3.11"
 empkins-io = { path = "../empkins-io", develop = true }
 numpy = "^1.24.3"
-scipy = "<1.12.0"
+scipy = "1.11.1"
 
-"pyannote.audio" = { version = "^2.1.1", optional = true }
-torch = { version = "<2", optional = true }
+"pyannote.audio" = { version = "^3", optional = true }
 praat-parselmouth = { version = "^0.4.3", optional = true }
 webrtcvad = { version = "^2.0.10", optional = true }
 pydub = { version = "^0.25.1", optional = true }
 wave = { version = "^0.0.2", optional = true }
 contextlib2 = { version = "^21.6.0", optional = true }
 collection = { version = "^0.1.6", optional = true }
+moviepy = { version = "^1.0.3", optional = true }
 
 tensorflow-macos = { version = "2.10.0", optional = true, platform = "darwin" }
 pywavelets = { version = "^1.4.1", optional = true }
@@ -29,7 +29,7 @@ mediapipe = { version = "^0.10.8", optional = true }
 tables = { version = "3.7.0", optional = true }
 
 [tool.poetry.extras]
-audio = ["pyannote.audio", "praat-parselmouth", "webrtcvad", "pydub", "wave", "contextlib2", "collection", "torch"]
+audio = ["pyannote.audio", "praat-parselmouth", "webrtcvad", "pydub", "wave", "contextlib2", "collection", "torch", "moviepy"]
 radar = ["tensorflow-macos", "pywavelets"]
 digital_biomarker = ["torch", "py-feat", "opencv-python", "smallestenclosingcircle", "mediapipe", "tables"]
 
