--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ wave = { version = "^0.0.2", optional = true }
 contextlib2 = { version = "^21.6.0", optional = true }
 collection = { version = "^0.1.6", optional = true }
 moviepy = { version = "^1.0.3", optional = true }
+faster-whisper = { version = "*", optional = true }
+
 
 tensorflow-macos = { version = "2.10.0", optional = true, platform = "darwin" }
 pywavelets = { version = "^1.4.1", optional = true }
@@ -29,7 +31,7 @@ mediapipe = { version = "^0.10.8", optional = true }
 tables = { version = "3.7.0", optional = true }
 
 [tool.poetry.extras]
-audio = ["pyannote.audio", "praat-parselmouth", "webrtcvad", "pydub", "wave", "contextlib2", "collection", "torch", "moviepy"]
+audio = ["pyannote.audio", "praat-parselmouth", "webrtcvad", "pydub", "wave", "contextlib2", "collection", "torch", "moviepy", "faster-whisper"]
 radar = ["tensorflow-macos", "pywavelets"]
 digital_biomarker = ["torch", "py-feat", "opencv-python", "smallestenclosingcircle", "mediapipe", "tables"]
 
