--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = ["Robert Richer <robert.richer@fau.de>", "Luca Abel <luca.abel@fau.de>
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
 biopsykit = { git = "https://github.com/mad-lab-fau/BioPsyKit.git", branch = "main", extras = ["jupyter"] }
-empkins-io = { git = "https://github.com/empkins/empkins-micro.git", branch = "main" }
+empkins-io = { git = "https://github.com/empkins/empkins-io.git", branch = "main" }
 #empkins-io = { path = "../empkins-io", develop = true }
 numpy = "^1.24.3"
 
