--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ radar = [
 dev = [
     "pytest~=5.2",
     "poethepoet>=0.10.0,<0.11",
+    "ruff>=0,<1",
 ]
 
 [tool.uv.sources]
@@ -63,25 +64,20 @@ exclude = '''
 )
 '''
 
-[tool.isort]
-profile = "black"
-multi_line_output = 3
-line_length = 120
-skip_gitignore = true
-
-[tool.poe.tasks]
-_black = "black ."
-_black_check = "black . --check"
-_isort = "isort **/*.py"
-_isort_check = "isort **/*.py --check-only"
-
 # Reformat all files using black and sort import
-format = { sequence = ["_black", "_isort"], help = "Format all files." }
-format_check = ["_black_check", "_isort_check"]
-lint = { cmd = "prospector", help = "Lint all files with Prospector." }
+[tool.poe.tasks]
+_format = "ruff format ."
+_auto_fix = "ruff check . --fix-only --show-fixes --exit-zero"
+_auto_fix_unsafe = "ruff check . --fix-only --show-fixes --exit-zero --unsafe-fixes"
+format = ["_auto_fix", "_format"]
+format_unsafe = ["_auto_fix_unsafe", "_format"]
+lint = { cmd = "ruff check src --fix", help = "Lint all files with ruff." }
+_lint_ci = "ruff check src --output-format=github"
+_check_format = "ruff format . --check"
+ci_check = { sequence = ["_check_format", "_lint_ci"], help = "Check all potential format and linting issues." }
 test = { cmd = "pytest --cov=src --cov-report=xml", help = "Run Pytest with coverage." }
 docs = { "script" = "_tasks:task_docs" }
-update_version = { "script" = "_tasks:task_update_version" }
+version = { "script" = "_tasks:task_update_version" }
 register_ipykernel = { cmd = "python -m ipykernel install --user --name empkins-micro --display-name empkins-micro", help = "Add a new jupyter kernel for the project." }
 remove_ipykernel = { cmd = "jupyter kernelspec uninstall empkins-micro", help = "Remove the project specific jupyter kernel." }
 default = { sequence = ["format", "lint", "test"], help = "Run the default pipeline, consisting of formatting, linting, and testing." }
